# cmake_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  b-cmake_template.kdev4
cmake/: configs.cmake  raylib.cmake  utils.cmake
src/: CMakeLists.txt  main.c  math_utils.c
tests/: CMakeLists.txt  test_math_utils.c  tests.c
